[gd_scene load_steps=5 format=3 uid="uid://dyaeadu4s2csp"]

[ext_resource type="Script" path="res://core/ui/config/modes/rule_configurator.gd" id="1_scn7g"]
[ext_resource type="PackedScene" uid="uid://bxxaadjg00dar" path="res://core/multiplayer/on_demand_synchronizer.tscn" id="2_0akbo"]
[ext_resource type="Script" path="res://core/ui/common/syncable_option_button.gd" id="2_486de"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_q8dv4"]
properties/0/path = NodePath("HBoxContainer/ModeSelector:selected_uuid")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="RuleConfigurator" type="VBoxContainer"]
offset_right = 143.0
offset_bottom = 58.0
script = ExtResource("1_scn7g")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Game mode"

[node name="ModeSelector" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
script = ExtResource("2_486de")

[node name="ConfigureButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Configure..."

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_q8dv4")

[node name="Configurator" type="PopupPanel" parent="."]
unique_name_in_owner = true
title = "Configurator"
initial_position = 4
size = Vector2i(307, 100)
borderless = false

[node name="VBoxContainer" type="VBoxContainer" parent="Configurator"]
offset_left = 4.0
offset_top = 4.0
offset_right = 303.0
offset_bottom = 96.0

[node name="ConfiguratorContainer" type="MarginContainer" parent="Configurator/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Configurator/VBoxContainer"]
layout_mode = 2

[node name="SetButton" type="Button" parent="Configurator/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Set"

[node name="CancelButton" type="Button" parent="Configurator/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="LoadButton" type="Button" parent="Configurator/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load..."

[node name="SaveButton" type="Button" parent="Configurator/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save..."

[node name="OnDemandSynchronizer" parent="." instance=ExtResource("2_0akbo")]
sync_on_ready = true

[node name="LoadDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(392, 500)
min_size = Vector2i(200, 500)
ok_button_text = "Open"
file_mode = 0
access = 1
use_native_dialog = true

[node name="SaveDialog" type="FileDialog" parent="."]
initial_position = 4
size = Vector2i(530, 500)
ok_button_text = "Save"
access = 1

[connection signal="syncable_item_selected" from="HBoxContainer/ModeSelector" to="." method="_on_mode_selector_syncable_item_selected"]
[connection signal="pressed" from="ConfigureButton" to="." method="_on_configure_button_pressed"]
[connection signal="popup_hide" from="Configurator" to="." method="_on_configurator_popup_hide"]
[connection signal="pressed" from="Configurator/VBoxContainer/HBoxContainer/SetButton" to="." method="_on_set_button_pressed"]
[connection signal="pressed" from="Configurator/VBoxContainer/HBoxContainer/SetButton" to="OnDemandSynchronizer" method="on_demand_sync"]
[connection signal="pressed" from="Configurator/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Configurator/VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Configurator/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="on_demand_synchronized" from="OnDemandSynchronizer" to="." method="_on_on_demand_synchronizer_on_demand_synchronized"]
[connection signal="file_selected" from="LoadDialog" to="." method="_on_load_dialog_file_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
